alignments fixed

--- a/style.css
+++ b/style.css
@@ -233,9 +233,9 @@ a {
 }
 /* new running time */
 .carousel-info {
-  max-width: 20rem;
-  margin: 0 auto;
+  max-width: 350px;
   display: flex;
+  margin-left: .5rem;
 
   align-items: center;
   justify-content: flex-end;
@@ -245,11 +245,11 @@ a {
   color: #fff;
   z-index: 1000;
   right: 22%;
-  bottom: 18%;
+  bottom: 20%;
 }
 .carousel-info .timeline {
-   height: 2px; 
-   width: 60%;
+   height: 3px; 
+   width: 100%;
    border: none;
    background: #fff;
 }
@@ -346,7 +346,8 @@ a {
   }
   .carousel-info {
     right: 2%;
-    bottom: 3%;
+    bottom: 5%;
+    width: 40%;
   }
 .carousel-info .card-number {
     font-size: 1.5rem;
@@ -372,7 +373,8 @@ a {
 
   .carousel-info {
     justify-content: flex-end;
-    width: 30%;
+    width: 35%;
+    bottom: 5%;
   }
 .carousel-info .timeline {
       flex-grow: 1;
